# projet-ERP5

./: .gitignore  README.md  info.txt  odoo-connect.py  pyproject.toml
odoo-app/realtor/: __manifest__.py
odoo-app/realtor/demo/: demo.xml  stock_demo.xml
odoo-app/realtor/models/: __init__.py  realtor_apartment.py  realtor_apartment_model.py  realtor_buyer_model.py  realtor_offer.py  realtor_offer_model.py  realtor_product.py  realtor_seller_model.py  res_users.py
odoo-app/realtor/security/: ir.model.access.csv  security.xml
odoo-app/realtor/views/: realtor_apartment_views.xml  realtor_menus.xml  realtor_offer_views.xml  res_users_views.xml
presentation/: custom.css  presentation.html  presentation.org
realtorclient/: README.md  manage.py  xml_rpc.py
realtorclient/home/templates/home/: index.html
realtorclient/odoo_connect/: forms.py  models.py  urls.py  views.py
realtorclient/odoo_connect/migrations/: 0001_initial.py
realtorclient/odoo_connect/templates/odoo_connect/: index.html
realtorclient/odoo_realtor/: apps.py  forms.py  urls.py  views.py
realtorclient/odoo_realtor/templates/odoo_realtor/: _add_offer_modal.html  index.html
realtorclient/realtorclient/: asgi.py  settings.py  urls.py  wsgi.py
realtorclient/templates/: _base.html
