[tool.poetry]
name = "projet-erp5"
version = "0.1.0"
description = ""
authors = ["Nathan Furnal <nathan_furnal@hotmail.com>"]
readme = "README.md"
packages = [{include = "projet_erp5"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
